xtcc/qscript/stubs/randomize/randomize.output
Grammar

    0 $accept: prog $end

    1 prog: stmt_list

    2 stmt_list: stmt
    3          | stmt_list stmt

    4 stmt: stubs
    5     | randomize_stub_statement ';'

    6 $@1: /* empty */

    7 stubs: STUBS_LIST NAME $@1 '=' stub_list ';'

    8 simple_stub_list: simple_stub
    9                 | simple_stub_list ',' simple_stub

   10 simple_stub: TEXT INUMBER
   11            | TEXT INUMBER MUTEX

   12 stub: simple_stub_list

   13 $@2: /* empty */

   14 stub: STUB_GROUP NAME $@2 '{' stub_list '}'

   15 stub_list: stub
   16          | stub_list stub

   17 randomize_stub_statement: RANDOMIZE STUBS_LIST NAME


Terminals, with rules where they appear

$end (0) 0
',' (44) 9
';' (59) 5 7
'=' (61) 7
'{' (123) 14
'}' (125) 14
error (256)
STUBS_LIST (258) 7 17
RANDOMIZE (259) 17
MUTEX (260) 11
STUB_GROUP (261) 14
NAME (262) 7 14 17
INUMBER (263) 10 11
TEXT (264) 10 11


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
prog (16)
    on left: 1, on right: 0
stmt_list (17)
    on left: 2 3, on right: 1 3
stmt (18)
    on left: 4 5, on right: 2 3
stubs (19)
    on left: 7, on right: 4
$@1 (20)
    on left: 6, on right: 7
simple_stub_list (21)
    on left: 8 9, on right: 9 12
simple_stub (22)
    on left: 10 11, on right: 8 9
stub (23)
    on left: 12 14, on right: 15 16
$@2 (24)
    on left: 13, on right: 14
stub_list (25)
    on left: 15 16, on right: 7 14 16
randomize_stub_statement (26)
    on left: 17, on right: 5


state 0

    0 $accept: . prog $end

    STUBS_LIST  shift, and go to state 1
    RANDOMIZE   shift, and go to state 2

    prog                      go to state 3
    stmt_list                 go to state 4
    stmt                      go to state 5
    stubs                     go to state 6
    randomize_stub_statement  go to state 7


state 1

    7 stubs: STUBS_LIST . NAME $@1 '=' stub_list ';'

    NAME  shift, and go to state 8


state 2

   17 randomize_stub_statement: RANDOMIZE . STUBS_LIST NAME

    STUBS_LIST  shift, and go to state 9


state 3

    0 $accept: prog . $end

    $end  shift, and go to state 10


state 4

    1 prog: stmt_list .
    3 stmt_list: stmt_list . stmt

    STUBS_LIST  shift, and go to state 1
    RANDOMIZE   shift, and go to state 2

    $default  reduce using rule 1 (prog)

    stmt                      go to state 11
    stubs                     go to state 6
    randomize_stub_statement  go to state 7


state 5

    2 stmt_list: stmt .

    $default  reduce using rule 2 (stmt_list)


state 6

    4 stmt: stubs .

    $default  reduce using rule 4 (stmt)


state 7

    5 stmt: randomize_stub_statement . ';'

    ';'  shift, and go to state 12


state 8

    7 stubs: STUBS_LIST NAME . $@1 '=' stub_list ';'

    $default  reduce using rule 6 ($@1)

    $@1  go to state 13


state 9

   17 randomize_stub_statement: RANDOMIZE STUBS_LIST . NAME

    NAME  shift, and go to state 14


state 10

    0 $accept: prog $end .

    $default  accept


state 11

    3 stmt_list: stmt_list stmt .

    $default  reduce using rule 3 (stmt_list)


state 12

    5 stmt: randomize_stub_statement ';' .

    $default  reduce using rule 5 (stmt)


state 13

    7 stubs: STUBS_LIST NAME $@1 . '=' stub_list ';'

    '='  shift, and go to state 15


state 14

   17 randomize_stub_statement: RANDOMIZE STUBS_LIST NAME .

    $default  reduce using rule 17 (randomize_stub_statement)


state 15

    7 stubs: STUBS_LIST NAME $@1 '=' . stub_list ';'

    STUB_GROUP  shift, and go to state 16
    TEXT        shift, and go to state 17

    simple_stub_list  go to state 18
    simple_stub       go to state 19
    stub              go to state 20
    stub_list         go to state 21


state 16

   14 stub: STUB_GROUP . NAME $@2 '{' stub_list '}'

    NAME  shift, and go to state 22


state 17

   10 simple_stub: TEXT . INUMBER
   11            | TEXT . INUMBER MUTEX

    INUMBER  shift, and go to state 23


state 18

    9 simple_stub_list: simple_stub_list . ',' simple_stub
   12 stub: simple_stub_list .

    ','  shift, and go to state 24

    $default  reduce using rule 12 (stub)


state 19

    8 simple_stub_list: simple_stub .

    $default  reduce using rule 8 (simple_stub_list)


state 20

   15 stub_list: stub .

    $default  reduce using rule 15 (stub_list)


state 21

    7 stubs: STUBS_LIST NAME $@1 '=' stub_list . ';'
   16 stub_list: stub_list . stub

    STUB_GROUP  shift, and go to state 16
    TEXT        shift, and go to state 17
    ';'         shift, and go to state 25

    simple_stub_list  go to state 18
    simple_stub       go to state 19
    stub              go to state 26


state 22

   14 stub: STUB_GROUP NAME . $@2 '{' stub_list '}'

    $default  reduce using rule 13 ($@2)

    $@2  go to state 27


state 23

   10 simple_stub: TEXT INUMBER .
   11            | TEXT INUMBER . MUTEX

    MUTEX  shift, and go to state 28

    $default  reduce using rule 10 (simple_stub)


state 24

    9 simple_stub_list: simple_stub_list ',' . simple_stub

    TEXT  shift, and go to state 17

    simple_stub  go to state 29


state 25

    7 stubs: STUBS_LIST NAME $@1 '=' stub_list ';' .

    $default  reduce using rule 7 (stubs)


state 26

   16 stub_list: stub_list stub .

    $default  reduce using rule 16 (stub_list)


state 27

   14 stub: STUB_GROUP NAME $@2 . '{' stub_list '}'

    '{'  shift, and go to state 30


state 28

   11 simple_stub: TEXT INUMBER MUTEX .

    $default  reduce using rule 11 (simple_stub)


state 29

    9 simple_stub_list: simple_stub_list ',' simple_stub .

    $default  reduce using rule 9 (simple_stub_list)


state 30

   14 stub: STUB_GROUP NAME $@2 '{' . stub_list '}'

    STUB_GROUP  shift, and go to state 16
    TEXT        shift, and go to state 17

    simple_stub_list  go to state 18
    simple_stub       go to state 19
    stub              go to state 20
    stub_list         go to state 31


state 31

   14 stub: STUB_GROUP NAME $@2 '{' stub_list . '}'
   16 stub_list: stub_list . stub

    STUB_GROUP  shift, and go to state 16
    TEXT        shift, and go to state 17
    '}'         shift, and go to state 32

    simple_stub_list  go to state 18
    simple_stub       go to state 19
    stub              go to state 26


state 32

   14 stub: STUB_GROUP NAME $@2 '{' stub_list '}' .

    $default  reduce using rule 14 (stub)
